[project]
name = "asrt-analyses"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "configobj>=5.0.9",
    "edfio>=0.4.8",
    "eeglabio>=0.0.3",
    "ipyevents>=2.0.2",
    "ipympl>=0.9.7",
    "ipython>=8.18.1",
    "ipywidgets>=8.1.6",
    "joblib>=1.4.2",
    "mffpy>=0.10.0",
    "mne>=1.8.0",
    "mne-bids>=0.15.0",
    "mne-bids-pipeline>=1.8.0",
    "mne-connectivity>=0.7.0",
    "mne-features>=0.3",
    "mne-icalabel>=0.7.0",
    "mne-nirs>=0.7.1",
    "mne-qt-browser>=0.6.3",
    "neo>=0.14.1",
    "nibabel>=5.3.2",
    "nilearn>=0.11.1",
    "pandas>=2.2.3",
    "pybv>=0.7.6",
    "pyqtgraph>=0.13.7",
    "pysurfer>=0.11.2",
    "pyvista>=0.44.2",
    "pyvistaqt>=0.11.2",
    "qtpy>=2.4.3",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
    "trame-client>=3.7.1",
    "trame-server>=3.4.0",
    "trame-vtk>=2.8.15",
    "trame-vuetify>=3.0.1",
    "vtk>=9.3.1",
    "xgboost>=2.1.4",
]
